--- a/brandmanager网络版.html
+++ b/brandmanager网络版.html
@@ -149,7 +149,7 @@
                 return `${year}-${month}-${day} ${hour}:${min}:${sec}`
             }
         },
-        //路由被创建出来的时候就会自动执行
+        //实例被创建出来的时候就会自动执行
         created(){
             this.getBrandListData()
         },
